# stock-ops

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE.md  README-QUICKSTART.md  README.md  docker-compose.yml  justfile  mypy.ini  pyproject.toml  release-please-config.json
.github/workflows/: cd.yml  ci.yml  release.yml
airflow/dags/: streaming_data_pipeline_dag.py
certs/live/stockops.local/: fullchain.cer  fullchain.pem  privkey.pem
data/git_lfs/raw/historical/: historical_interday_EODHD_US.db  historical_intraday_EODHD_US_2025_JUL.db
data/git_lfs/raw/streaming/: streaming_EODHD_US_2025_AUG_27.db
data/git_lfs/test_data/historical/: historical_interday_EODHD_US.db  historical_interday_EODHD_US.db-shm  historical_interday_EODHD_US.db-wal  historical_intraday_EODHD_US_2025_JUL.db
data/git_lfs/test_data/streaming/: streaming_EODHD_US_2025_AUG_18.db  streaming_EODHD_US_2025_AUG_18.db-shm  streaming_EODHD_US_2025_AUG_18.db-wal
data/test_data/historical/: historical_interday_EODHD_US.db  historical_intraday_EODHD_US_2025_JUL.db
data/test_data/inputs/: test_data.txt  xformer_out_test_data.txt
data/test_data/streaming/: streaming_EODHD_US_2025_AUG_18.db
datapipe_ui/: api_backend.py  api_client.py  api_factory.py  frontend.py  ui_backend.py  utils.py
docker/: Dockerfile.certbot  Dockerfile.htpasswd  Dockerfile.nginx  Dockerfile.prefect-serve  Dockerfile.prefect-server  Dockerfile.streamlit  Dockerfile.writer
docker/airflow/: Dockerfile
docker/controller/: Dockerfile
docker/prefect/: Dockerfile
docker/streamlit/: Dockerfile
flows/: data_pipeline_flow.py
local_workflows/: data_pipeline.py  local.py  local_ETL.py  local_read.py  local_streamlit_dev.py  local_write.py  pytests.py  reader.py  temp_local_dev.py
local_workflows/reader_local/: local_read_ci.py  local_reader_manual.py
local_workflows/streamlit/: dummy_api.py  local_streamlit_dev.py
local_workflows/streamlit_local/: dummy_api.py  local_streamlit_ci.py  local_streamlit_manual.py
local_workflows/writer/: local_write.py  randomize_xformer_out_test_data.py  test_data.txt  writer_test.py  xformer_out_test_data.txt
nginx/: htpasswd  htpasswd-local
nginx/conf.d/: stockops-base.conf  stockops-local.conf  stockops-local.conf.template  stockops-prod.conf  stockops-prod.conf.template  stockops.conf
nginx/host/: stockops-host.conf.template
prefect/: data_pipeline_flow.py
run/: stockops.sh
scripts/: certbot-init.sh  certbot-renew.sh  check_venv_sync.sh  derive_env_from_pyproject.py  derive_env_from_pyproject.sh  export_build_versions.sh  init-htpasswd-local.sh  init-htpasswd-prod.sh  install-dev.sh  install.sh  install_ui_deps.py  install_writer_deps.py  nginx-entrypoint.sh  nginx-reload-loop.sh  validate_python_version.sh
src/ingestion/: controller.py
src/ingestion/stock_streamer/: sql_db.py  stream_data.db  streaming_service.py
src/stockops/: __init__.py  config.py  main.py
src/stockops/config/: config.py  eodhd_config.py  utils.py
src/stockops/data/: controller.py  sql_db.py  transform.py  utils.py
src/stockops/data/database/: reader.py  sql_db.py  utils.py  write_buffer.py  writer.py
src/stockops/data/historical/: base_historical_service.py  eodhd_historical_service.py  providers.py
src/stockops/data/streaming/: base_streaming_service.py  eodhd_streaming_service.py  providers.py  streaming_service.py
src/stockops/data/streaming/stock_streamer_RUSTALT/: Cargo.toml
src/stockops/data/streaming/stock_streamer_RUSTALT/src/: lib.rs
src/stockops/local_workflows/: data_pipeline.py
src/stockops/runtime/: data_pipeline_api.py
tests/: conftest.py  test_controller_isolated.py  test_data_pipeline_api_controller.py  test_data_utils.py  test_datapipe.py  test_docker.py  test_stock_streamer.py  test_streaming.py
ui/: api_calls.py  api_factory.py  streamlit_app.py  ui_backend.py  utils.py
