[package]
name = "stock_streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
serde_json = "1"
url = "2"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

[lib]
crate-type = ["cdylib"]
